--- a/book/SEMINAR_SERIES.tex
+++ b/book/SEMINAR_SERIES.tex
@@ -164,32 +164,33 @@ This is when we wish to predict a numeric / continuous outcome such as a
 final sales price for a house or car. It might also be a prediction of
 tomorrow's stock or Bit Coin price.
 
-\section{Performance Metrics}\label{performance-metrics}
-
-For either of those cases we need some type of metric or measure to let
-us know how well a given model will work on new or unseen data - also
-known as ``out of sample'' data. for Classification problems we look at
-things like ``sensitivity'', ``specificity'', ``accuracy'', and ``Area
-Under Curve''. For Quantitative outcomes, we look at things like Root
-Mean Square Error (RMSE) or Mean Absolute Error (MAE). The selection of
-metric will frequently depend on your domain of interest.
-
 \section{In-Sample vs Out-Of-Sample
 Data}\label{in-sample-vs-out-of-sample-data}
 
-Independently of the metric, the goal of predictive model is to generate
-models that can generalize to new data. It would be good if any model we
-generate could provide a good estimate of out of sample error. It's easy
-to generate a model on an entire data set (in sample data) and then turn
-around and use that data for prediction. But how will it perform on new
-data ? Haven't we just over trained our model ?
+The goal of predictive model is to generate models that can generalize
+to new data. It would be good if any model we generate could provide a
+good estimate of out of sample error. It's easy to generate a model on
+an entire data set (in sample data) and then turn around and use that
+data for prediction. But how will it perform on new data ? Haven't we
+just over trained our model ?
 
-\chapter{A Practical Example}\label{a-practical-example}
+\section{Performance Metrics}\label{performance-metrics}
+
+For either case (regression vs classification) we need some type of
+metric or measure to let us know how well a given model will work on new
+or unseen data - also known as ``out of sample'' data. for
+Classification problems we look at things like ``sensitivity'',
+``specificity'', ``accuracy'', and ``Area Under Curve''. For
+Quantitative outcomes, we look at things like Root Mean Square Error
+(RMSE) or Mean Absolute Error (MAE). The selection of metric will
+frequently depend on your domain of interest.
+
+\chapter{Getting Hands On}\label{getting-hands-on}
 
 Let's consider the Pima Indians Data that is part of the
-\textbf{mlbench} package. You can install this package via the Tools
--\textgreater{} Install Package menu item within RStudio or type the
-following at the R console prompt:
+\textbf{mlbench} package. You can install this package via the
+\textbf{Tools -\textgreater{} Install Package} menu item within RStudio
+or type the following at the R console prompt:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -535,7 +536,8 @@ into a comparable factor. Right now, it's just a character string.
 ## 
 \end{verbatim}
 
-\section{Performance Measures}\label{performance-measures}
+\section{Performance Measures
+Revisited}\label{performance-measures-revisited}
 
 This is helpful stuff although there are a number of measures to select
 as a primary performance metric. Ideally, we would already know which
@@ -545,7 +547,7 @@ commonly used. Some applications use ``Accuracy'' (which isn't good when
 there is large group imbalance). Anyway, if, for example, we pick
 ``sensitivity'' as a judge of model quality we see that is somewhere
 around .87. (A much deeper discussion about selecting the best
-performance measure is in order but we'll keep moving for mow)
+performance measure is in order but we'll keep moving for now)
 
 The problem here is that all we have done is looked at the confusion
 matrix corresponding to one specific (and arbitrary) threshold value
