--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,8 @@
 --- 
 title: "Predictive Modeling For Imposters"
 author: "Steve Pittard"
+email: wsp@emory.edu
+affiliation: Department of Biostatistics and Bioinformatics
 date: "`r Sys.Date()`"
 bibliography:
 - book.bib
@@ -32,17 +34,17 @@ This relates to situations such as whether someone has a disease ("positive") or
 
 This is when we wish to predict a numeric / continuous outcome such as a final sales price for a house or car. It might also be a prediction of tomorrow's stock or Bit Coin price. 
 
-## Performance Metrics
-
-For either of those cases we need some type of metric or measure to let us know how well a given model will work on new or unseen data - also known as "out of sample" data. for Classification problems we look at things like "sensitivity", "specificity", "accuracy", and "Area Under Curve". For Quantitative outcomes, we look at things like Root Mean Square Error (RMSE) or Mean Absolute Error (MAE). The selection of metric will frequently depend on your domain of interest. 
-
 ## In-Sample vs  Out-Of-Sample Data 
 
-Independently of the metric, the goal of predictive model is to generate models that can generalize to new data. It would be good if any model we generate could provide a good estimate of out of sample error. It's easy to generate a model on an entire data set (in sample data) and then turn around and use that data for prediction. But how will it perform on new data ? Haven't we just over trained our model ? 
+The goal of predictive model is to generate models that can generalize to new data. It would be good if any model we generate could provide a good estimate of out of sample error. It's easy to generate a model on an entire data set (in sample data) and then turn around and use that data for prediction. But how will it perform on new data ? Haven't we just over trained our model ? 
 
-# A Practical Example
+## Performance Metrics
 
-Let's consider the Pima Indians Data that is part of the **mlbench** package. You can install this package via the Tools -> Install Package menu item within RStudio or type the following at the R console prompt:
+For either case (regression vs classification) we need some type of metric or measure to let us know how well a given model will work on new or unseen data - also known as "out of sample" data. for Classification problems we look at things like "sensitivity", "specificity", "accuracy", and "Area Under Curve". For Quantitative outcomes, we look at things like Root Mean Square Error (RMSE) or Mean Absolute Error (MAE). The selection of metric will frequently depend on your domain of interest. 
+
+# Getting Hands On
+
+Let's consider the Pima Indians Data that is part of the **mlbench** package. You can install this package via the **Tools -> Install Package** menu item within RStudio or type the following at the R console prompt:
 
 ```{r mlbench,eval=FALSE}
 install.packages("mlbench")
@@ -218,10 +220,10 @@ mypreds <- factor(mypreds,
 caret::confusionMatrix(mypreds,test$diabetes,positive="pos")
 ```
 
-## Performance Measures
+## Performance Measures Revisited
 
 This is helpful stuff although there are a number of measures to select as a primary performance metric. Ideally, we would already know which performance metric we would select to effectively "judge" the quality of our model. In medical tests, "sensitivity" and "specificity" are commonly used. Some applications use "Accuracy" (which isn't good when there is large group imbalance). Anyway, if, for example, we pick "sensitivity" as a judge of model quality we see that is somewhere around .87. 
-(A much deeper discussion about selecting the best performance measure is in order but we'll keep moving for mow)
+(A much deeper discussion about selecting the best performance measure is in order but we'll keep moving for now)
 
 The problem here is that all we have done is looked at the confusion matrix corresponding to one specific (and arbitrary) threshold value when what we need is to look at a number of confusion matrices corresponding to many different thresholds. For example, we might get a better sensitivity level had we selected the mean of the returned probabilities. This process could go on and on and on... So we would benefit from a rigorous approach to find the "best" threshold. 
 
