--- a/book/SEMINAR_SERIES.tex
+++ b/book/SEMINAR_SERIES.tex
@@ -200,8 +200,8 @@ Rules, Neural Networks
 
 \section{Predictive Modeling}\label{predictive-modeling}
 
-This lecture is concerned primarily with Predictive Modeling. Some use
-cases of Predictive Modeling include:
+This lecture is concerned primarily with Predictive Modeling. Some
+examples of Predictive Modeling include:
 
 \begin{itemize}
 \item
@@ -1546,7 +1546,7 @@ we can see that just 4 attributes gives almost comparable results
 \chapter{Comparing Models}\label{comparing-models}
 
 One of the more frequent activities in Machine Learning relates to
-setting up ``shoot ours'' between different models to see which one will
+setting up ``shoot outs'' between different models to see which one will
 perform the best. This is something we could do without \textbf{caret}
 but the package does help accomplish this using a standard interface.
 We'll keep using the Pima Indians Data and (re)build a few models. We'll
@@ -1584,10 +1584,19 @@ reproducibility.
                   \DataTypeTok{metric=}\StringTok{"ROC"}\NormalTok{,}
                   \DataTypeTok{trControl=}\NormalTok{control)}
 
+\CommentTok{# Train the knn model}
+\KeywordTok{set.seed}\NormalTok{(}\DecValTok{7}\NormalTok{)}
+\NormalTok{model_knn <-}\StringTok{ }\KeywordTok{train}\NormalTok{(diabetes}\OperatorTok{~}\NormalTok{., }
+                  \DataTypeTok{data=}\NormalTok{pm, }
+                  \DataTypeTok{method=}\StringTok{"knn"}\NormalTok{, }
+                  \DataTypeTok{metric=}\StringTok{"ROC"}\NormalTok{,}
+                  \DataTypeTok{trControl=}\NormalTok{control)}
+
 \CommentTok{# Use the resamples function to prep for comparisons}
 \NormalTok{results <-}\StringTok{ }\KeywordTok{resamples}\NormalTok{(}\KeywordTok{list}\NormalTok{(}\DataTypeTok{GLM   =}\NormalTok{ model_glm, }
                           \DataTypeTok{RPART =}\NormalTok{ model_rpart, }
-                          \DataTypeTok{RF    =}\NormalTok{ model_rf))}
+                          \DataTypeTok{RF    =}\NormalTok{ model_rf,}
+                          \DataTypeTok{KNN   =}\NormalTok{ model_knn))}
 \end{Highlighting}
 \end{Shaded}
 
@@ -1605,7 +1614,7 @@ Now we can easily look at how well the different models compare:
 ## Call:
 ## summary.resamples(object = results)
 ## 
-## Models: GLM, RPART, RF 
+## Models: GLM, RPART, RF, KNN 
 ## Number of resamples: 5 
 ## 
 ## ROC 
@@ -1613,18 +1622,21 @@ Now we can easily look at how well the different models compare:
 ## GLM   0.8007407 0.8042593 0.8392593 0.8344745 0.8479245 0.8801887    0
 ## RPART 0.6974074 0.7090566 0.7329245 0.7411184 0.7579630 0.8082407    0
 ## RF    0.7878704 0.8193519 0.8359434 0.8323997 0.8368519 0.8819811    0
+## KNN   0.7449074 0.7754630 0.7788889 0.7900217 0.7938679 0.8569811    0
 ## 
 ## Sens 
 ##       Min. 1st Qu. Median  Mean 3rd Qu. Max. NA's
 ## GLM   0.85    0.87   0.89 0.886    0.89 0.93    0
 ## RPART 0.75    0.82   0.85 0.836    0.88 0.88    0
 ## RF    0.81    0.84   0.87 0.856    0.88 0.88    0
+## KNN   0.80    0.84   0.85 0.850    0.88 0.88    0
 ## 
 ## Spec 
 ##            Min.   1st Qu.    Median      Mean   3rd Qu.      Max. NA's
 ## GLM   0.5555556 0.5555556 0.5740741 0.5747729 0.5849057 0.6037736    0
 ## RPART 0.4444444 0.5471698 0.5660377 0.5596785 0.5740741 0.6666667    0
 ## RF    0.5000000 0.5740741 0.5925926 0.6012579 0.6415094 0.6981132    0
+## KNN   0.4814815 0.4814815 0.5283019 0.5377358 0.5370370 0.6603774    0
 \end{verbatim}
 
 \begin{Shaded}
