Added graphics to Intro section

--- a/book/SEMINAR_SERIES.tex
+++ b/book/SEMINAR_SERIES.tex
@@ -266,6 +266,18 @@ Quantitative outcomes, we look at things like Root Mean Square Error
 frequently depend on your domain of interest. We'll use a couple of
 different methods.
 
+\section{Black Box}\label{black-box}
+
+The good news is that you can treat building predictive models as a
+``Black Box''. The bad news is that you can treat building predictive
+models as a ``Black Box''.
+
+\begin{figure}
+\centering
+\includegraphics{./PICS/black_box.png}
+\caption{}
+\end{figure}
+
 \chapter{Getting Hands On}\label{getting-hands-on}
 
 \begin{Shaded}
